Bug 274260 - Muon crashed while searching and the application was still initializing
Summary: Muon crashed while searching and the application was still initializing
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-27 12:20 UTC by Alvaro Manuel Recio Perez
Modified: 2011-05-28 03:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.1.90
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Manuel Recio Perez 2011-05-27 12:20:57 UTC
Application: muon (1.1.80 "Caustic Carrionite")
KDE Platform Version: 4.6.3 (4.6.3)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-8-generic x86_64
Distribution: Ubuntu 11.04

-- Information about the crash:
- What I was doing when the application crashed:

I opened Muon and I tried to search for a package just as soon as the window appeared. It seems that Muon hadn't initialized itself completely and it crashed.

The crash can be reproduced some of the time.

-- Backtrace:
Application: Gestor de paquetes Muon (muon), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f1c4e26b780 (LWP 19457))]

Thread 2 (Thread 0x7f1c38279700 (LWP 19460)):
#0  0x00007f1c4a658f03 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=<value optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f1c46585104 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f1c46585639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f1c4c130446 in QEventDispatcherGlib::processEvents (this=0x298dd40, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f1c4c104882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f1c4c104abc in QEventLoop::exec (this=0x7f1c38278dd0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f1c4c01b924 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#7  0x00007f1c4c0e6c2f in QInotifyFileSystemWatcherEngine::run (this=0x298d260) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f1c4c01e175 in QThreadPrivate::start (arg=0x298d260) at thread/qthread_unix.cpp:320
#9  0x00007f1c47fd2d8c in start_thread (arg=0x7f1c38279700) at pthread_create.c:304
#10 0x00007f1c4a66604d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f1c4e26b780 (LWP 19457)):
[KCrash Handler]
#6  QApt::Backend::search (this=0x0, searchString=...) at /build/buildd/qapt-1.1.80/src/backend.cpp:1301
#7  0x00007f1c4de75504 in PackageProxyModel::search (this=0x23c60b0, searchText=...) at /build/buildd/muon-1.1.80/libmuon/PackageModel/PackageProxyModel.cpp:74
#8  0x00007f1c4de78b53 in PackageWidget::startSearch (this=0x2446100) at /build/buildd/muon-1.1.80/libmuon/PackageModel/PackageWidget.cpp:358
#9  0x00007f1c4de7bf3a in PackageWidget::qt_metacall (this=0x2446100, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fff7f464ec0) at /build/buildd/muon-1.1.80/obj-x86_64-linux-gnu/libmuon/PackageWidget.moc:117
#10 0x000000000040e5e0 in ManagerWidget::qt_metacall (this=0x2446100, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff7f464ec0) at /build/buildd/muon-1.1.80/obj-x86_64-linux-gnu/muon/ManagerWidget.moc:73
#11 0x00007f1c4c11a5f8 in QMetaObject::activate (sender=0x2448ca0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3287
#12 0x00007f1c4c1191c9 in QObject::event (this=0x2448ca0, e=<value optimized out>) at kernel/qobject.cpp:1190
#13 0x00007f1c4b4c69e4 in QApplicationPrivate::notify_helper (this=0x2322a60, receiver=0x2448ca0, e=0x7fff7f4655c0) at kernel/qapplication.cpp:4462
#14 0x00007f1c4b4cb3aa in QApplication::notify (this=<value optimized out>, receiver=0x2448ca0, e=0x7fff7f4655c0) at kernel/qapplication.cpp:4341
#15 0x00007f1c4cdbe196 in KApplication::notify (this=0x7fff7f466fc0, receiver=0x2448ca0, event=0x7fff7f4655c0) at ../../kdeui/kernel/kapplication.cpp:311
#16 0x00007f1c4c10549c in QCoreApplication::notifyInternal (this=0x7fff7f466fc0, receiver=0x2448ca0, event=0x7fff7f4655c0) at kernel/qcoreapplication.cpp:731
#17 0x00007f1c4c132f12 in sendEvent (this=0x2320970) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#18 QTimerInfoList::activateTimers (this=0x2320970) at kernel/qeventdispatcher_unix.cpp:604
#19 0x00007f1c4c12fcf4 in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:184
#20 0x00007f1c46584bcd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#21 0x00007f1c465853a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#22 0x00007f1c46585639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#23 0x00007f1c4c1303ef in QEventDispatcherGlib::processEvents (this=0x22ca340, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#24 0x00007f1c4b56ddfe in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#25 0x00007f1c4c10903f in QCoreApplication::processEvents (flags=...) at kernel/qcoreapplication.cpp:923
#26 0x00007f1c4d76d203 in QApt::CacheBuildProgress::Update (this=<value optimized out>) at /build/buildd/qapt-1.1.80/src/cache.cpp:36
#27 0x00007f1c4885999b in pkgDepCache::Init(OpProgress*) () from /usr/lib/libapt-pkg.so.4.10
#28 0x00007f1c488834cd in pkgCacheFile::BuildDepCache(OpProgress*) () from /usr/lib/libapt-pkg.so.4.10
#29 0x00007f1c4888354a in pkgCacheFile::Open(OpProgress*, bool) () from /usr/lib/libapt-pkg.so.4.10
#30 0x00007f1c4d76d08a in QApt::Cache::open (this=<value optimized out>) at /build/buildd/qapt-1.1.80/src/cache.cpp:85
#31 0x00007f1c4d768d91 in QApt::Backend::reloadCache (this=0x244b2e0) at /build/buildd/qapt-1.1.80/src/backend.cpp:166
#32 0x00007f1c4d76a17f in QApt::Backend::init (this=0x244b2e0) at /build/buildd/qapt-1.1.80/src/backend.cpp:156
#33 0x00007f1c4de64cfc in MuonMainWindow::initObject (this=0x2387a80) at /build/buildd/muon-1.1.80/libmuon/MuonMainWindow.cpp:73
#34 0x000000000040cc19 in MainWindow::initObject (this=0x2387a80) at /build/buildd/muon-1.1.80/muon/MainWindow.cpp:123
#35 0x000000000040d93c in MainWindow::qt_metacall (this=0x2387a80, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff7f4665d0) at /build/buildd/muon-1.1.80/obj-x86_64-linux-gnu/muon/MainWindow.moc:112
#36 0x00007f1c4c11a5f8 in QMetaObject::activate (sender=0x280b3f0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3287
#37 0x00007f1c4c12034f in QSingleShotTimer::timerEvent (this=0x280b3f0) at kernel/qtimer.cpp:308
#38 0x00007f1c4c1191c9 in QObject::event (this=0x280b3f0, e=<value optimized out>) at kernel/qobject.cpp:1190
#39 0x00007f1c4b4c69e4 in QApplicationPrivate::notify_helper (this=0x2322a60, receiver=0x280b3f0, e=0x7fff7f466ce0) at kernel/qapplication.cpp:4462
#40 0x00007f1c4b4cb3aa in QApplication::notify (this=<value optimized out>, receiver=0x280b3f0, e=0x7fff7f466ce0) at kernel/qapplication.cpp:4341
#41 0x00007f1c4cdbe196 in KApplication::notify (this=0x7fff7f466fc0, receiver=0x280b3f0, event=0x7fff7f466ce0) at ../../kdeui/kernel/kapplication.cpp:311
#42 0x00007f1c4c10549c in QCoreApplication::notifyInternal (this=0x7fff7f466fc0, receiver=0x280b3f0, event=0x7fff7f466ce0) at kernel/qcoreapplication.cpp:731
#43 0x00007f1c4c132f12 in sendEvent (this=0x2320970) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#44 QTimerInfoList::activateTimers (this=0x2320970) at kernel/qeventdispatcher_unix.cpp:604
#45 0x00007f1c4c12fcf4 in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:184
#46 0x00007f1c46584bcd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#47 0x00007f1c465853a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#48 0x00007f1c46585639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#49 0x00007f1c4c1303ef in QEventDispatcherGlib::processEvents (this=0x22ca340, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#50 0x00007f1c4b56ddfe in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#51 0x00007f1c4c104882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#52 0x00007f1c4c104abc in QEventLoop::exec (this=0x7fff7f466f50, flags=...) at kernel/qeventloop.cpp:201
#53 0x00007f1c4c108ecb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#54 0x000000000040b01e in main (argc=5, argv=<value optimized out>) at /build/buildd/muon-1.1.80/muon/main.cpp:55

Reported using DrKonqi
Comment 1 Alvaro Manuel Recio Perez 2011-05-27 12:35:11 UTC
I think this bug should be assigned to Muon. Somebody should change it.
Comment 2 Jonathan Thomas 2011-05-28 03:04:50 UTC
Git commit 9fae19400128ef8facec7b6494aee25aa91dfa0b by Jonathan Thomas.
Committed on 28/05/2011 at 03:02.
Pushed by jmthomas into branch 'master'.

I already had code in place to enable the search bar only after the backend was ready. Unfortunately I accidentally removed the single line that disables the search bar in the first place whilst doing other things. :/
On the plus side this doesn't affect Muon 1.1.

BUG:274260
FIXED-IN:1.1.90

M  +1    -0    libmuon/PackageModel/PackageWidget.cpp     

http://commits.kde.org/muon/9fae19400128ef8facec7b6494aee25aa91dfa0b