I already had code in place to enable the search bar only after the backend was ready. Unfortunately I accidentally removed the single line that disables the search bar in the first place whilst doing other things. :/ On the plus side this doesn't affect Muon 1.1.

BUG:274260
FIXED-IN:1.1.90